align issue fixed

--- a/src/Pages/Home/BestCreator/style.css
+++ b/src/Pages/Home/BestCreator/style.css
@@ -8,7 +8,7 @@
     color: #fff;
     font-weight: 500;
     height: 100%;
-    max-height: 700px;
+    max-height: 100%;
 }
 
 .number-slide1 {
