--- a/src/Pages/Home/Insights/carousel.css
+++ b/src/Pages/Home/Insights/carousel.css
@@ -17,3 +17,9 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.ads-bg {
+    background-image: url("../../../assets/images/ads.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
